[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/adb_helper/icon.png" type="Texture" id=1]
[ext_resource path="res://addons/adb_helper/adb_helper.gd" type="Script" id=2]

[node name="adb_helper" type="Button"]
margin_right = 36.0
margin_bottom = 30.0
shortcut_in_tooltip = false
icon = ExtResource( 1 )
flat = true
script = ExtResource( 2 )

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
margin_left = 13.0
margin_top = 69.0
margin_right = 279.0
margin_bottom = 258.0
window_title = "Wireless ADB Debugging"

[node name="DialogContainer" type="VBoxContainer" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="DeviceContainer" type="VBoxContainer" parent="WindowDialog/DialogContainer"]
margin_right = 256.0
margin_bottom = 123.0
size_flags_vertical = 3

[node name="HeaderLabels" type="HBoxContainer" parent="WindowDialog/DialogContainer/DeviceContainer"]
editor/display_folded = true
margin_right = 256.0
margin_bottom = 14.0

[node name="DeviceHeader" type="Label" parent="WindowDialog/DialogContainer/DeviceContainer/HeaderLabels"]
margin_right = 44.0
margin_bottom = 14.0
text = "Device"

[node name="IPHeader" type="Label" parent="WindowDialog/DialogContainer/DeviceContainer/HeaderLabels"]
margin_left = 48.0
margin_right = 194.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "IP"
align = 1
valign = 1

[node name="ConnectHeader" type="Label" parent="WindowDialog/DialogContainer/DeviceContainer/HeaderLabels"]
margin_left = 198.0
margin_right = 256.0
margin_bottom = 14.0
text = "Connect?"

[node name="HSeparator" type="HSeparator" parent="WindowDialog/DialogContainer"]
margin_top = 127.0
margin_right = 256.0
margin_bottom = 131.0

[node name="AddDeviceContainer" type="HBoxContainer" parent="WindowDialog/DialogContainer"]
margin_top = 135.0
margin_right = 256.0
margin_bottom = 155.0

[node name="DeviceTextEdit" type="TextEdit" parent="WindowDialog/DialogContainer/AddDeviceContainer"]
margin_right = 66.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Name"

[node name="IPTextEdit" type="TextEdit" parent="WindowDialog/DialogContainer/AddDeviceContainer"]
margin_left = 70.0
margin_right = 202.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "IP: 192.168.0.1"

[node name="AddButton" type="Button" parent="WindowDialog/DialogContainer/AddDeviceContainer"]
margin_left = 206.0
margin_right = 255.0
margin_bottom = 20.0
text = "Add..."

[node name="Settingsbutton" type="Button" parent="WindowDialog/DialogContainer"]
margin_top = 159.0
margin_right = 129.0
margin_bottom = 179.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Android Settings..."
[connection signal="pressed" from="." to="." method="_on_adb_helper_pressed"]
[connection signal="pressed" from="WindowDialog/DialogContainer/AddDeviceContainer/AddButton" to="." method="_on_AddButton_pressed"]
